# transcribee

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  compose-dev.yml  compose.dev.yml  compose.yml  dev.sh  docker-devshell.sh  flake.nix  shell.nix
backend/: .gitignore  .python-version  README.md  alembic.ini  manage.py  openapi-schema.yml  pyproject.toml
backend/backend/: asgi.py  main.py  routing.py  urls.py  wsgi.py
backend/backend/api/: apps.py  serializers.py  views.py
backend/backend/base/: admin.py  apps.py  models.py  serializers.py
backend/backend/db/: __init__.py
backend/backend/db/migrations/: env.py
backend/backend/db/migrations/versions/: 0ba2a5aa5df9_add_usertoken_model.py  ace5dceb9f0f_init.py
backend/backend/models/: __init__.py
backend/backend/routers/: user.py
backend/backend/settings/: base.py  dev.py
backend/backend/sync/: consumers.py  routing.py
backend/data/: models.json
backend/notebooks/: Analyze Task Duration.ipynb
backend/scripts/: create_api_token.py  create_user.py  create_user_token.py  create_worker.py  generate_openapi.py  reset_task.py  set_password.py
backend/storage/: .gitignore
backend/tests/: conftest.py  test_doc.py  test_migrations.py  test_performance.py  test_user.py
backend/transcribee_backend/: asgi.py  auth.py  config.py  default_models.json  exceptions.py  main.py  media_storage.py  metrics.py  routing.py  static_files.py  urls.py  utils.py  wsgi.py
backend/transcribee_backend/admin_cli/: __init__.py  command.py  main.py
backend/transcribee_backend/admin_cli/commands/: create_api_token.py  create_user.py  create_user_token.py  create_worker.py  list_documents.py  reset_task.py  set_document.py  set_password.py
backend/transcribee_backend/api/: apps.py  schema.py  serializers.py  urls.py  views.py
backend/transcribee_backend/api/templates/api/: include_completed_filter.html
backend/transcribee_backend/base/: admin.py  apps.py  middleware.py  models.py  serializers.py  utils.py  views.py
backend/transcribee_backend/base/management/commands/: create_superuser_if_not_exists.py  create_worker.py
backend/transcribee_backend/base/migrations/: 0001_initial.py  0002_remove_document_yjs_content_documentupdate.py  0003_worker_task.py  0004_alter_task_progress_alter_task_task_parameters.py  0005_task_assigned_at_task_completed_task_completed_at.py  0006_task_completion_data.py  0007_alter_task_dependency.py  0008_alter_task_assigned_at.py  0008_alter_worker_last_seen.py  0009_merge_20230321_1425.py  0010_alter_task_assigned_at_alter_task_assigned_worker_and_more.py
backend/transcribee_backend/db/: __init__.py  run_migrations.py
backend/transcribee_backend/db/migrations/: README  env.py
backend/transcribee_backend/db/migrations/versions/: 10e80963c5a3_automerge_loro_migration.py  14b5324ec3e2_add_task_completion_data_document_.py  1ec1e251173a_init.py  417eece003cb_add_worker_deactivated_at_flag.py  59c9184ab48b_add_name_field_to_documentsharetoken.py  6392770332cd_add_taskattempt.py  72c5eb8a46de_add_documentsharetoken.py  937846561faf_add_apitoken.py  c88376bf4844_fix_accidentially_nullable_fields.py  c9d4c04a9125_remove_align_task.py  d679c226343d_add_documentsharetoken.py  ef78fa0844f4_add_user_last_seen.py  (+1 more)
backend/transcribee_backend/helpers/: periodic_tasks.py  repeated_tasks.py  sync.py  tasks.py  time.py
backend/transcribee_backend/models/: __init__.py  api.py  document.py  task.py  user.py  worker.py
backend/transcribee_backend/routers/: config.py  document.py  page.py  task.py  user.py  worker.py
backend/transcribee_backend/settings/: __init__.py  base.py  dev.py  local.py.example
backend/transcribee_backend/sync/: consumers.py
backend/transcribee_backend/util/: base_url.py  redis_task_channel.py
desktop/desktop-backend/: Cargo.toml
desktop/desktop-backend/src/: backend.rs  lib.rs  state.rs
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  download_native_deps.py  native-deps.json  prepare_resources.py  prepare_worker.py  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: generate_icons.sh  icon.icns
desktop/src-tauri/src/: backend.rs  backend_plugin.rs  file_handling.rs  lib.rs  main.rs  tar.rs  worker_plugin.rs
desktop/worker-adapter/: Cargo.toml
desktop/worker-adapter/src/: handlers.rs  lib.rs  state.rs  sync_message.rs  worker_adapter.rs
proto/: .gitignore  README.md  document.py  pyproject.toml
proto/transcribee_proto/: api.py  document.py  sync.py
worker/: .env.example  .gitignore  README.md  build_worker_bundle.py  dump_doc.py  generate_speaker_clusters.py  loro_conv.py  loro_load.py  pyproject.toml  run.py  run_worker.sh  transcribe_manual.py
worker/__pypackages__/: .gitignore
worker/packaging/: build_worker_bundle.py  native_deps.json  run_worker.bat.tmpl  run_worker.sh.tmpl
worker/scripts/: generate_model_config.py
worker/tests/: test_pegasus_transcribe.py  test_reencode.py  test_transcribe.py
worker/tests/data/: test_combine_tokens_to_words-simple.json  test_move_space_to_prev_token-simple.json  test_space_and_sentences-simple.json  test_strict_sentence_paragraphs-combines-paragraph-2.json  test_strict_sentence_paragraphs-combines-paragraph.json  test_strict_sentence_paragraphs-doest_combine_long_para.json  test_strict_sentence_paragraphs-leaves_special_paras.json  test_strict_sentence_paragraphs-noop.json  test_strict_sentence_paragraphs-protected_paragraphs.json  test_strict_sentence_paragraphs-special-case-number-text.json  test_strict_sentence_paragraphs-special-case-zB.json  test_strict_sentence_paragraphs-splits-paragraph.json
worker/transcribee_worker/: api_client.py  config.py  diarize.py  document.py  icu.pyi  identify_speakers.py  pegasus_transcribe.py  reencode.py  run.py  torchaudio_align.py  types.py  util.py  whisper_transcribe.py  worker.py
worker/transcribee_worker/icu/: __init__.pyi
worker/transcribee_worker/webvtt/: export_webvtt.py  webvtt_writer.py
(+233 files in other folders)
