[project]
name = "transcribee-backend"
version = "0.1.0"
description = "The backend for the transcribee open-source transcription platform."
authors = [
    { name = "anuejn", email = "jarohabiger@googlemail.com" },
    { name = "pajowu", email = "git@ca.pajowu.de" },
    { name = "phlmn", email = "info@philipp-mandler.com" },
    { name = "vup", email = "robin.ole.heinemann+transcribee@gmail.com" },
]

dependencies = [
    "redis>=5.0.1",
    "fastapi>=0.92.0",
    "uvicorn[standard]>=0.20.0",
    "sqlmodel~=0.0.22",
    "alembic>=1.11.1",
    "python-multipart>=0.0.6",
    "filetype>=1.2.0",
    "websockets>=10.4",
    "python-magic>=0.4.27",
    "transcribee-proto @ file:///${PROJECT_ROOT}/../proto",
    "python-frontmatter>=1.0.0",
    "psycopg2>=2.9.9",
    "prometheus-fastapi-instrumentator>=6.1.0",
]
requires-python = ">=3.11"
readme = "./README.md"
license = { text = "AGPL-3.0" }

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "pandas>=2.0.1",
    "tabulate>=0.9.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
]


[dependency-groups]
dev = [
    "pyyaml>=6.0",
    "pytest>=7.3.1",
    "httpx>=0.24.0",
    "pytest-alembic>=0.10.4",
    "pyright>=1.1.314",
]


[tool.poe.tasks]
start = "uvicorn transcribee_backend.main:app --ws websockets"
dev = "uvicorn transcribee_backend.main:app --reload --ws websockets"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"
create_user = "scripts/create_user.py"
create_worker = "scripts/create_worker.py"
create_api_token = "scripts/create_api_token.py"
reset_task = "scripts/reset_task.py"
generate_openapi = "python -m scripts.generate_openapi"
test = "pytest tests/"

[tool.setuptools]
packages = ["transcribee_backend"]
