[project]
name = "transcribee-backend"
version = "0.1.0"
description = "The backend for the transcribee open-source transcription platform."
authors = [
    { name = "anuejn", email = "jarohabiger@googlemail.com" },
    { name = "pajowu", email = "git@ca.pajowu.de" },
    { name = "phlmn", email = "info@philipp-mandler.com" },
    { name = "vup", email = "robin.ole.heinemann+transcribee@gmail.com" },
]

dependencies = [
    "redis~=5.0.1",
    "fastapi~=0.92.0",
    "uvicorn[standard]~=0.20.0",
    "sqlmodel~=0.0.11",
    "alembic~=1.11.1",
    "python-multipart~=0.0.6",
    "filetype~=1.2.0",
    "websockets~=10.4",
    "python-magic~=0.4.27",
    "transcribee-proto",
    "python-frontmatter~=1.0.0",
    "psycopg2~=2.9.9",
    "prometheus-fastapi-instrumentator~=6.1.0",
]
requires-python = ">=3.11"
readme = "./README.md"
license = { text = "AGPL-3.0" }

[dependency-groups]
dev = [
    "pyyaml~=6.0",
    "pytest~=7.3.1",
    "httpx~=0.24.0",
    "pytest-alembic~=0.10.4",
    "pyright~=1.1.314",
]
notebooks = [
    "jupyter~=1.0.0",
    "pandas~=2.0.1",
    "tabulate~=0.9.0",
    "matplotlib~=3.7.1",
    "seaborn~=0.12.2",
]

[tool.uv]
override-dependencies = [
  "sqlalchemy==1.4.41"
]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
transcribee-proto = { path = "../proto", editable = true }

[tool.poe.tasks]
start = "uvicorn transcribee_backend.main:app --ws websockets"
dev = "uvicorn transcribee_backend.main:app --reload --ws websockets"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"
create_user = "scripts/create_user.py"
create_worker = "scripts/create_worker.py"
create_api_token = "scripts/create_api_token.py"
reset_task = "scripts/reset_task.py"
generate_openapi = "python -m scripts.generate_openapi"
test = "pytest tests/"
pyright = "pyright transcribee_backend/"

[tool.setuptools]
packages = ["transcribee_backend"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
