[project]
name = "transcribee-backend"
version = "0.1.0"
description = "The backend for the transcribee open-source transcription platform."
authors = [
    { name = "anuejn", email = "jarohabiger@googlemail.com" },
    { name = "pajowu", email = "git@ca.pajowu.de" },
    { name = "phlmn", email = "info@philipp-mandler.com" },
    { name = "vup", email = "robin.ole.heinemann+transcribee@gmail.com" },
]

dependencies = [
    "redis~=5.0",
    "fastapi~=0.115",
    "uvicorn[standard]~=0.20",
    "sqlmodel~=0.0",
    "alembic~=1.0",
    "python-multipart~=0.0",
    "filetype~=1.2",
    "websockets~=10.4",
    "python-magic~=0.4",
    "transcribee-proto",
    "python-frontmatter~=1.0",
    "psycopg2~=2.9",
    "prometheus-fastapi-instrumentator~=6.1",
    "pydantic~=2.2",
    "pydantic-settings>=2.7",
]
requires-python = ">=3.11"
readme = "./README.md"
license = { text = "AGPL-3.0" }

[dependency-groups]
dev = [
    "pyyaml~=6.0",
    "pytest~=7.3",
    "httpx~=0.24",
    "pytest-alembic~=0.10",
    "pyright~=1.1",
]
notebooks = [
    "jupyter~=1.0",
    "pandas~=2.0",
    "tabulate~=0.9",
    "matplotlib~=3.7",
    "seaborn~=0.12",
]

[project.scripts]
transcribee-migrate = "transcribee_backend.db.run_migrations:main"
transcribee-admin = "transcribee_backend.admin_cli:main"

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
transcribee-proto = { path = "../proto", editable = true }

[tool.poe.tasks]
start = "uvicorn transcribee_backend.main:app --ws websockets"
dev = "uvicorn transcribee_backend.main:app --reload --ws websockets"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"
admin = "transcribee-admin"
generate_openapi = "python -m scripts.generate_openapi"
test = "pytest tests/"
pyright = "pyright transcribee_backend/"

[tool.setuptools.packages.find]
include = ["transcribee_backend*"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
