[project]
name = "transcribee-proto"
version = "0.1.0"
description = "common python code & datatypes in the transcribee open-source transcription platform"
authors = [
    {name = "anuejn", email = "jarohabiger@googlemail.com"},
    {name = "pajowu", email = "git@ca.pajowu.de"},
    {name = "phlmn", email = "info@philipp-mandler.com"},
    {name = "vup", email = "robin.ole.heinemann+transcribee@gmail.com"},
]

dependencies = [
    "pydantic~=2.2",
]
requires-python = "~=3.12.0"
readme = "README.md"
license = {text = "AGPL-3.0"}

[tool.setuptools]
packages = ["transcribee_proto"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "**/*.py" }] # add python files to cache key, otherwise uv will cache too agressively

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
