[project]
name = "transcribee-worker"
version = "0.1.0"
description = "a transcription worker for the transcribee open-source transcription platform"
authors = [
    { name = "anuejn", email = "jarohabiger@googlemail.com" },
    { name = "pajowu", email = "git@ca.pajowu.de" },
    { name = "phlmn", email = "info@philipp-mandler.com" },
    { name = "vup", email = "robin.ole.heinemann+transcribee@gmail.com" },
]

dependencies = [
    "spectralcluster~=0.2.21",
    "numpy~=1.23",
    "pydantic~=2.2",
    "transformers~=4.26",
    "torchaudio~=2.0",
    "torch~=2.0",
    "automerge @ git+https://github.com/transcribee/automerge-py.git@ca6d8d3",
    "websockets~=10.4",
    "scikit-learn~=1.2",
    "watchfiles~=0.19.0",
    "speechbrain~=0.5.14",
    "ffmpeg-python~=0.2.0",
    "transcribee-proto",
    "PyICU~=2.11",
    "faster-whisper~=1.1",
    "pydantic-settings>=2.7.1",
]

requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }

[dependency-groups]
dev = [
  "black~=23.1.0",
  "inquirer~=3.1.3",
  "pyright~=1.1.391",
  "pytest~=7.3.1",
]

[project.scripts]
transcribee-worker = "transcribee_worker.run:main"

[tool.poe.tasks]
start = "transcribee-worker"
test = "pytest tests/"
pyright = "pyright transcribee_worker/"

[tool.uv]
override-dependencies = [
  "soundfile==0.11.0"
]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
transcribee-proto = { path = "../proto", editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
packages = ["transcribee_worker"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
