[project]
name = "transcribee-worker"
version = "0.1.0"
description = "a transcription worker for the transcribee open-source transcription platform"
authors = [
    { name = "anuejn", email = "jarohabiger@googlemail.com" },
    { name = "pajowu", email = "git@ca.pajowu.de" },
    { name = "phlmn", email = "info@philipp-mandler.com" },
    { name = "vup", email = "robin.ole.heinemann+transcribee@gmail.com" },
]

dependencies = [
    "spectralcluster~=0.2",
    "numpy~=2.0",
    "pydantic~=2.2",
    "transformers~=4.26",
    "torchaudio~=2.0",
    "torch~=2.0",
    "automerge @ git+https://github.com/bugbakery/automerge-py.git@a381bc8",
    "websockets~=10.4",
    "scikit-learn~=1.2",
    "watchfiles~=0.19",
    "speechbrain~=0.5",
    "ffmpeg-python~=0.2",
    "transcribee-proto",
    "PyICU~=2.11",
    "pydantic-settings>=2.7",
    "decent-whisper @ git+https://github.com/bugbakery/decent-whisper.git@b56e13f",
]

requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }

[dependency-groups]
dev = [
  "black~=23.1",
  "inquirer~=3.1",
  "pyright~=1.1",
  "pytest~=7.3",
]

[project.scripts]
transcribee-worker = "transcribee_worker.run:main"

[tool.poe.tasks]
start = "transcribee-worker"
test = "pytest tests/"
pyright = "pyright transcribee_worker/"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
override-dependencies = [
  "soundfile==0.11.0"
]
config-settings = { editable_mode = "compat" }

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
transcribee-proto = { path = "../proto", editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools]
packages = ["transcribee_worker"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
