[package]
name = "desktop-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
env_logger = { version = "0.11.10", optional = true }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["serde"] }

[features]
standalone = ["dep:env_logger"]

[[bin]]
name = "standalone"
required-features = ["standalone"]
